--- a/unicorecmsffl/locale/tha_TH/LC_MESSAGES/unicorecmsffl.po
+++ b/unicorecmsffl/locale/tha_TH/LC_MESSAGES/unicorecmsffl.po
@@ -1,15 +1,15 @@
 #
-# Language eng translations for PACKAGE package
+# Language tha translations for PACKAGE package
 # This file is distributed under the same license as the PACKAGE package.
 # TonyM <tonym@localhost>, 2014.
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
 "POT-Creation-Date: 2014-09-26 14:32+0200\n"
-"PO-Revision-Date: 2014-09-25 17:58+0200\n"
+"PO-Revision-Date: 2014-09-26 14:32+0200\n"
 "Last-Translator: TonyM <tonym@localhost>\n"
-"Language-Team: Language eng\n"
-"Language: eng_UK\n"
+"Language-Team: Language tha\n"
+"Language: tha_TH\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -17,19 +17,19 @@ msgstr ""
 #. Default: Home
 #: unicorecmsffl/templates/base.pt:42 unicorecmsffl/templates/base.pt:71
 msgid "home"
-msgstr ""
+msgstr "Duck"
 
 #. Default: About
 #: unicorecmsffl/templates/base.pt:45 unicorecmsffl/templates/base.pt:74
 msgid "about"
-msgstr ""
+msgstr "Goose"
 
 #. Default: Credits
 #: unicorecmsffl/templates/base.pt:48 unicorecmsffl/templates/base.pt:77
 msgid "credits"
-msgstr ""
+msgstr "Dove"
 
 #. Default: Contact
 #: unicorecmsffl/templates/base.pt:51 unicorecmsffl/templates/base.pt:80
 msgid "contact"
-msgstr ""
+msgstr "Pigeon"
