--- a/unicorecmsffl/locale/ind_ID/LC_MESSAGES/unicorecmsffl.po
+++ b/unicorecmsffl/locale/ind_ID/LC_MESSAGES/unicorecmsffl.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
-"POT-Creation-Date: 2014-09-26 14:32+0200\n"
+"POT-Creation-Date: 2014-09-29 23:09+0200\n"
 "PO-Revision-Date: 2014-09-26 14:32+0200\n"
 "Last-Translator: TonyM <tonym@localhost>\n"
 "Language-Team: Language ind\n"
@@ -13,6 +13,16 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+#. Default: Latest
+#: unicorecmsffl/templates/home.pt:11
+msgid "latest"
+msgstr "Beatle"
+
+#. Default: More
+#: unicorecmsffl/templates/home.pt:66
+msgid "more"
+msgstr "Bee"
 
 #. Default: Home
 #: unicorecmsffl/templates/base.pt:42 unicorecmsffl/templates/base.pt:71
