--- a/unicorecmsffl/locale/swh_TZ/LC_MESSAGES/unicorecmsffl.po
+++ b/unicorecmsffl/locale/swh_TZ/LC_MESSAGES/unicorecmsffl.po
@@ -1,55 +1,48 @@
-#
-# Language swh translations for PACKAGE package
+# 
+# SOME DESCRIPTIVE TITLE
 # This file is distributed under the same license as the PACKAGE package.
-# TonyM <tonym@localhost>, 2014.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2014.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE 1.0\n"
+"Project-Id-Version: PACKAGE VERSION\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-10-10 08:52+0200\n"
-"PO-Revision-Date: 2014-09-25 17:57+0200\n"
-"Last-Translator: TonyM <tonym@localhost>\n"
-"Language-Team: Language swh\n"
+"PO-Revision-Date: 2014-10-14 09:06+0000\n"
+"Last-Translator: Anonymous Pootle User\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: swh_TZ\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Pootle 2.5.1.1\n"
+"X-POOTLE-MTIME: 1413277579.067131\n"
 
 #. Default: Latest
-#: unicorecmsffl/templates/home.pt:11
-#, fuzzy
+#: ./unicorecmsffl/templates/home.pt:11
 msgid "Latest"
-msgstr "Kudu"
+msgstr ""
 
 #. Default: More
-#: unicorecmsffl/templates/home.pt:64
+#: ./unicorecmsffl/templates/home.pt:64
 msgid "More"
-msgstr "Eland"
+msgstr ""
 
 #. Default: Home
-#: unicorecmsffl/templates/base.pt:42 unicorecmsffl/templates/base.pt:71
+#: ./unicorecmsffl/templates/base.pt:42 ./unicorecmsffl/templates/base.pt:71
 msgid "Home"
-msgstr "Zebra"
+msgstr "Nyumbani"
 
 #. Default: About
-#: unicorecmsffl/templates/base.pt:45 unicorecmsffl/templates/base.pt:74
-#, fuzzy
+#: ./unicorecmsffl/templates/base.pt:45 ./unicorecmsffl/templates/base.pt:74
 msgid "About"
-msgstr "Impala"
+msgstr "Kuhusu"
 
 #. Default: Credits
-#: unicorecmsffl/templates/base.pt:48 unicorecmsffl/templates/base.pt:77
-#, fuzzy
+#: ./unicorecmsffl/templates/base.pt:48 ./unicorecmsffl/templates/base.pt:77
 msgid "Credits"
-msgstr "Springbok"
+msgstr "Shukrani"
 
 #. Default: Contact
-#: unicorecmsffl/templates/base.pt:51 unicorecmsffl/templates/base.pt:80
-#, fuzzy
+#: ./unicorecmsffl/templates/base.pt:51 ./unicorecmsffl/templates/base.pt:80
 msgid "Contact"
-msgstr "Deer"
-
-#~ msgid "more"
-#~ msgstr "Eland"
-
-#~ msgid "home"
-#~ msgstr "Zebra"
+msgstr "Anwani"
