--- a/unicorecmsffl/locale/swa_TZ/LC_MESSAGES/unicorecmsffl.po
+++ b/unicorecmsffl/locale/swa_TZ/LC_MESSAGES/unicorecmsffl.po
@@ -6,11 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-10-15 17:26+0200\n"
+"POT-Creation-Date: 2014-11-19 17:16+0200\n"
 "PO-Revision-Date: 2014-10-15 15:24+0000\n"
 "Last-Translator: Anonymous Pootle User\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: swh_TZ\n"
+"Language: swa_TZ\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -27,17 +27,6 @@ msgstr ""
 msgid "More"
 msgstr ""
 
-#. Default: Credits
-#: unicorecmsffl/templates/credits.pt:9 unicorecmsffl/templates/base.pt:51
-#: unicorecmsffl/templates/base.pt:80
-msgid "Credits"
-msgstr "Shukrani"
-
-#. Default: Thanks to our partners
-#: unicorecmsffl/templates/credits.pt:12
-msgid "Thanks to our partners"
-msgstr "Shukrani kwa washirika wetu"
-
 #. Default: Home
 #: unicorecmsffl/templates/base.pt:45 unicorecmsffl/templates/base.pt:74
 msgid "Home"
@@ -48,7 +37,15 @@ msgstr "Nyumbani"
 msgid "About"
 msgstr "Kuhusu"
 
+#. Default: Credits
+#: unicorecmsffl/templates/base.pt:51 unicorecmsffl/templates/base.pt:80
+msgid "Credits"
+msgstr "Shukrani"
+
 #. Default: Contact
 #: unicorecmsffl/templates/base.pt:54 unicorecmsffl/templates/base.pt:83
 msgid "Contact"
 msgstr "Anwani"
+
+#~ msgid "Thanks to our partners"
+#~ msgstr "Shukrani kwa washirika wetu"
